--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -12,7 +12,7 @@ button {
 	border-width: 0px;
 	border-color: #DDDDDD;
 	border-radius: 4px;
-	font-size: 18;
+	font-size: 18px;
 	background-color: #FF5A5F;
 	color: #FFFFFF;
 	height: 48px;
